# trk-io

./: .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  LICENSE.txt  README-crates.io.md  README.md  README.rst
examples/: trk_color.rs  trk_header.rs  trk_len_check.rs  trk_n_first.rs  trk_print.rs  trk_subsampler.rs
src/: affine.rs  affine_nifti.rs  array_sequence.rs  cheader.rs  header.rs  key_value_reader.rs  lib.rs  main.rs  orientation.rs  reader.rs  streamlines.rs  tractogram.rs  trk.rs  vs_reader.rs  writer.rs
tests/: affine.rs  array_sequence.rs  header.rs  orientation.rs  trk.rs  trk_read.rs  trk_write.rs
tests/test/: mod.rs
