[package]
name = "trk-io"
version = "0.29.0"
authors = ["Nil Goyette <nil.goyette@imeka.ca>"]

description = "TrackVis (*.trk) reader and writer"
repository = "https://github.com/imeka/trk-io"
readme = "README.md"
keywords = ["diffusion-mri", "trackvis", "trk"]
categories = ["data-structures", "science"]
license = "BSD-2-Clause"
edition = "2021"

[features]
nifti_images = ["ndarray", "nifti"]

[dev-dependencies]
docopt = "1.1"
rand = { version = "0.9", default-features = false, features = [
    "alloc",
    "os_rng",
    "small_rng",
] }
tempfile = "3.20"

[dependencies]
anyhow = "1.0"
byteorder = "1.4"
nalgebra = "0.33"

[dependencies.ndarray]
version = "0.16"
optional = true

[dependencies.nifti]
version = "0.16"
features = ["nalgebra_affine", "ndarray_volumes"]
optional = true
